# enem-ai-analyst

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  streamlit_app.py
ai_data_analyst/: agent.py
ai_data_analyst/sub_agents/: analysis_agent.py  planner_agent.py  visualization_agent.py
ai_data_analyst/tools/: chart_validation.py
docs/: enem-ai-analyst-frd-v1.md  enem-ai-analyst-prd-v1.md
enem-ai-analyst/: app.py
enem-ai-analyst/agents/: __init__.py  data_agent.py
enem-ai-analyst/frontend/: __init__.py  streamlit_app.py
enem-ai-analyst/sub_agents/: analysis_agent.py  data_agent.py  visualization_agent.py
enem_ai_analyst/: agent.py  config_manager.py
enem_ai_analyst/sub_agents/: analysis_agent.py  data_agent.py  narrative_agent.py  planner_agent.py  visualization_agent.py
enem_ai_analyst/tools/: chart_helpers.py  postgres_mcp.py
eval/: test_eval.py
eval/data/: data_agent_evalset.json  descriptive_analyzer_agent_tool_evalset.json  narrative_agent_tool_evalset.json  visualization_agent_tool_evalset.json
tests/data/: chinook.sql  chinook_query.txt  happiness_index.sql  happiness_index_query.txt
tests/integration/: test_analysis_agent.py  test_data_agent.py  test_narrative_agent.py  test_orchestrator_agent.py  test_planner_agent.py  test_visualization_agent.py
tests/integration/fixtures/analysis_agent/: eval_set_analysis_agent.test.json  test_config.json
tests/integration/fixtures/data_agent/: eval_set_data_agent.test.json  test_config.json
tests/unit/: __init__.py  test_config_manager.py
(+8 files in other folders)
